agregando div_info

--- a/foro.html
+++ b/foro.html
@@ -27,8 +27,52 @@
 	</header>
 	<section class="contenido">
 				<article>
+					<div clas="info">
 
-					<img src="imagenes/enconstruccion.png" alt="enconstruccion" height="200" width="350">
+						<a href="imagenes/vayne.jpg">Vayne</a>
+						<h1>Vayne</h1>
+						<p>La Cazadora Nocturna</p>
+
+						<dl>
+							<dt><a href=""></a>Vida:</dt>
+							<dd>498.44(+83 por nivel)</dd>
+							<dt><a href=""></a>Daño de Ataque:</dt>
+							<dd>64(+1.66 por nivel)</dd>
+							<dt><a href=""></a>Velocidad de Ataque:</dt>
+							<dd>0.659(+3.3% por nivel)</dd>
+							<dt><a href=""></a>Velocidad de Movimiento:</dt>
+							<dd>330</dd>
+							<dt><a href=""></a>Regeneracion de Vida:</dt>
+							<dd>5.5(+0.55 por nivel)</dd>
+							<dt><a href=""></a>Armadura:</dt>
+							<dd>28(+3.4 por nivel)</dd>
+							<dt><a href=""></a>Resistencia Magica:</dt>
+							<dd>30(+0.5 por nivel)</dd>
+
+
+						</dl>
+
+
+
+
+
+					</div>
+					<div clas="aspecto">
+
+
+					</div>
+					<div class="habilidades">
+
+
+					</div>
+
+
+
+
+
+
+
+					
 
 	
 				</article>
