cambios en div_info

--- a/foro.html
+++ b/foro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="es">
 	<meta charset="utf-8">
 	<title>Vayne|Lore, Habilidades, Skin, Guias, Counter </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
@@ -34,22 +34,20 @@
 						<p>La Cazadora Nocturna</p>
 
 						<dl>
-							<dt><a href=""></a>Vida:</dt>
+							<dt><a href="imagenes/estadisticas/vida.jpg"></a>Vida:</dt>
 							<dd>498.44(+83 por nivel)</dd>
-							<dt><a href=""></a>Daño de Ataque:</dt>
+							<dt><a href="imagenes/estadisticas/dañoataque.jpg"></a>Daño de Ataque:</dt>
 							<dd>64(+1.66 por nivel)</dd>
-							<dt><a href=""></a>Velocidad de Ataque:</dt>
+							<dt><a href="imagenes/estadisticas/velocidadataque.jpg"></a>Velocidad de Ataque:</dt>
 							<dd>0.659(+3.3% por nivel)</dd>
-							<dt><a href=""></a>Velocidad de Movimiento:</dt>
+							<dt><a href="imagenes/estadisticas/velocidadmovimiento.jpg"></a>Velocidad de Movimiento:</dt>
 							<dd>330</dd>
-							<dt><a href=""></a>Regeneracion de Vida:</dt>
+							<dt><a href="imagenes/estadisticas/regeneracionvida.jpg"></a>Regeneracion de Vida:</dt>
 							<dd>5.5(+0.55 por nivel)</dd>
-							<dt><a href=""></a>Armadura:</dt>
+							<dt><a href="imagenes/estadisticas/armadura.jpg"></a>Armadura:</dt>
 							<dd>28(+3.4 por nivel)</dd>
-							<dt><a href=""></a>Resistencia Magica:</dt>
+							<dt><a href="imagenes/estadisticas/resistenciamagica.jpg"></a>Resistencia Magica:</dt>
 							<dd>30(+0.5 por nivel)</dd>
-
-
 						</dl>
 
 
