moficaciones div_info

--- a/inicio.html
+++ b/inicio.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="es">
 	<meta charset="utf-8">
 	<title>Vayne|Lore, Habilidades, Skin, Guias, Counter </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet"  href="estilos.css">
 	<link rel="icon" href="imagenes/favico.png" sizes="16x16" type="image/png" >
+
 </head>
 <body>
 	
@@ -23,16 +24,56 @@
 			
 		</nav>
 
-	<img src="imagenes/enconstruccion.png" alt="enconstruccion" height="200" width="350">
 	</header>
 	<section class="contenido">
-			<img src="imagenes/Vayne.png" alt="vayne" height="120" width="120">
-			<h3>Vayne <br> La Cazadora Nocturna </h3>
-			
-			<article>
+				<article>
+					<div clas="info">
+
+						<a href="imagenes/vayne.jpg">Vayne</a>
+						<h1>Vayne</h1>
+						<p>La Cazadora Nocturna</p>
+
+						<dl>
+							<dt><a href="imagenes/estadisticas/vida.jpg"></a>Vida:</dt>
+							<dd>498.44(+83 por nivel)</dd>
+							<dt><a href="imagenes/estadisticas/dañoataque.jpg"></a>Daño de Ataque:</dt>
+							<dd>64(+1.66 por nivel)</dd>
+							<dt><a href="imagenes/estadisticas/velocidadataque.jpg"></a>Velocidad de Ataque:</dt>
+							<dd>0.659(+3.3% por nivel)</dd>
+							<dt><a href="imagenes/estadisticas/velocidadmovimiento.jpg"></a>Velocidad de Movimiento:</dt>
+							<dd>330</dd>
+							<dt><a href="imagenes/estadisticas/regeneracionvida.jpg"></a>Regeneracion de Vida:</dt>
+							<dd>5.5(+0.55 por nivel)</dd>
+							<dt><a href="imagenes/estadisticas/armadura.jpg"></a>Armadura:</dt>
+							<dd>28(+3.4 por nivel)</dd>
+							<dt><a href="imagenes/estadisticas/resistenciamagica.jpg"></a>Resistencia Magica:</dt>
+							<dd>30(+0.5 por nivel)</dd>
+						</dl>
+
+
+
+
+
+					</div>
+					<div clas="aspecto">
+
+
+					</div>
+					<div class="habilidades">
+
+
+					</div>
+
+
+
+
+
+
+
 					
+
 	
-			</article>
+				</article>
 				
 
 	</section>
