--- a/inicio.html
+++ b/inicio.html
@@ -17,7 +17,6 @@
 			<ul>
 				<li><a href="inicio.html">Inicio</a></li>
 				<li><a href="historia.html">Historia</a></li>
-				<li><a href="guia.html">Guias</a></li>
 				<li><a href="foro.html">Foro</a></li>	
 
 			</ul>
@@ -29,24 +28,24 @@
 				<article>
 					<div clas="info">
 
-						<a href="imagenes/vayne.jpg">Vayne</a>
+						<img src="imagenes/vayne.jpg" alt="Vayne">
 						<h1>Vayne</h1>
 						<p>La Cazadora Nocturna</p>
 
 						<dl>
-							<dt><a href="imagenes/estadisticas/vida.jpg"></a>Vida:</dt>
+							<dt><img src="imagenes/estadisticas/vida.jpg">Vida:</dt>
 							<dd>498.44(+83 por nivel)</dd>
-							<dt><a href="imagenes/estadisticas/dañoataque.jpg"></a>Daño de Ataque:</dt>
+							<dt><img src="imagenes/estadisticas/dañoataque.jpg">Daño de Ataque:</dt>
 							<dd>64(+1.66 por nivel)</dd>
-							<dt><a href="imagenes/estadisticas/velocidadataque.jpg"></a>Velocidad de Ataque:</dt>
+							<dt><img src="imagenes/estadisticas/velocidadataque.jpg">Velocidad de Ataque:</dt>
 							<dd>0.659(+3.3% por nivel)</dd>
-							<dt><a href="imagenes/estadisticas/velocidadmovimiento.jpg"></a>Velocidad de Movimiento:</dt>
+							<dt><img src="imagenes/estadisticas/velocidadmovimiento.jpg">Velocidad de Movimiento:</dt>
 							<dd>330</dd>
-							<dt><a href="imagenes/estadisticas/regeneracionvida.jpg"></a>Regeneracion de Vida:</dt>
+							<dt><img src="imagenes/estadisticas/regeneracionvida.jpg">Regeneracion de Vida:</dt>
 							<dd>5.5(+0.55 por nivel)</dd>
-							<dt><a href="imagenes/estadisticas/armadura.jpg"></a>Armadura:</dt>
+							<dt><img src="imagenes/estadisticas/armadura.jpg">Armadura:</dt>
 							<dd>28(+3.4 por nivel)</dd>
-							<dt><a href="imagenes/estadisticas/resistenciamagica.jpg"></a>Resistencia Magica:</dt>
+							<dt><img src="imagenes/estadisticas/resistenciamagica.jpg">Resistencia Magica:</dt>
 							<dd>30(+0.5 por nivel)</dd>
 						</dl>
 
