agregando div_info

--- a/inicio.html
+++ b/inicio.html
@@ -28,7 +28,7 @@
 				<article>
 					<div clas="info">
 
-						<img src="imagenes/vayne.jpg" alt="Vayne">
+						<img src="imagenes/vayne.png">
 						<h1>Vayne</h1>
 						<p>La Cazadora Nocturna</p>
 
@@ -48,10 +48,15 @@
 							<dt><img src="imagenes/estadisticas/resistenciamagica.jpg">Resistencia Magica:</dt>
 							<dd>30(+0.5 por nivel)</dd>
 						</dl>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/tCKNHBcmN4g?rel=0" 
+						frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						<br>
 
-
-
-
+						<a href="#"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
+						<a href="#"> <img src="imagenes/habilidades/VayneTumble.png"></a>
+						<a href="#"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a>
+						<a href="#"> <img src="imagenes/habilidades/VayneCondemn.png"></a>
+						<a href="#"> <img src="imagenes/habilidades/VayneInquisition.png"></a>
 
 					</div>
 					<div clas="aspecto">
