Actualizando div habilidades

--- a/inicio.html
+++ b/inicio.html
@@ -52,29 +52,52 @@
 						frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 						<br>
 
-						<a href="#"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
-						<a href="#"> <img src="imagenes/habilidades/VayneTumble.png"></a>
-						<a href="#"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a>
-						<a href="#"> <img src="imagenes/habilidades/VayneCondemn.png"></a>
-						<a href="#"> <img src="imagenes/habilidades/VayneInquisition.png"></a>
+						<a href="#NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
+						<a href="#Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a>
+						<a href="#SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a>
+						<a href="#Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a>
+						<a href="#Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a>
 
 					</div>
 					<div clas="aspecto">
-							<img src="imagenes/aspectos/Vayne_0.jpg">
-							<img src="imagenes/aspectos/Vayne_1.jpg">
-							<img src="imagenes/aspectos/Vayne_2.jpg">
-							<img src="imagenes/aspectos/Vayne_3.jpg">
-							<img src="imagenes/aspectos/Vayne_4.jpg">
-							<img src="imagenes/aspectos/Vayne_5.jpg">
-							<img src="imagenes/aspectos/Vayne_6.jpg">
-							<img src="imagenes/aspectos/Vayne_10.jpg">
-							<img src="imagenes/aspectos/Vayne_11.jpg">
-
-
+						<h2>Aspectos</h2>
+						<img src="imagenes/aspectos/Vayne_0.jpg">
+						<img src="imagenes/aspectos/Vayne_1.jpg">
+						<img src="imagenes/aspectos/Vayne_2.jpg">
+						<img src="imagenes/aspectos/Vayne_3.jpg">
+						<img src="imagenes/aspectos/Vayne_4.jpg">
+						<img src="imagenes/aspectos/Vayne_5.jpg">
+						<img src="imagenes/aspectos/Vayne_6.jpg">
+						<img src="imagenes/aspectos/Vayne_10.jpg">
+						<img src="imagenes/aspectos/Vayne_11.jpg">
 					</div>
 					<div class="habilidades">
-					
+						<h2>Habilidades</h2>
 
+						<div clas="NightHunter">
+							<a name="NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a> 
+							<h3>Cazadora Noturna</h3>
+
+
+
+						</div>
+						<div class="VayneTumble">
+							<a name="Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a> 
+							<h3>Voltereta</h3>
+
+						</div>
+						<div class="SilveredBolts">
+							<a name="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a> 
+							<h3>Proyectiles de Plata
+								</div></h3>
+						<div class="Condemn">
+							<a name="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a> 
+							<h3>Condena</h3>
+						</div>
+						<div class="Inquisition">
+							<a name="Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a> 
+							<h3>Hora Final</h3>
+						</div>
 
 					</div>
 				</article>
