--- a/inicio.html
+++ b/inicio.html
@@ -88,8 +88,8 @@
 						</div>
 						<div class="SilveredBolts">
 							<a name="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a> 
-							<h3>Proyectiles de Plata
-								</div></h3>
+							<h3>Proyectiles de Plata</h3>
+								</div>
 						<div class="Condemn">
 							<a name="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a> 
 							<h3>Condena</h3>
