--- a/inicio.html
+++ b/inicio.html
@@ -76,7 +76,7 @@
 
 						<div clas="NightHunter">
 							<a name="NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a> 
-							<h3>Cazadora Noturna</h3>
+							<h3>Cazadora Nocturna</h3>
 
 
 
