--- a/inicio.html
+++ b/inicio.html
@@ -77,26 +77,71 @@
 						<div clas="NightHunter">
 							<a name="NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a> 
 							<h3>Cazadora Nocturna</h3>
-
+							<p>Vayne caza sin piedad a los malhechores.Obteniendo 30 puntos de Velocidad de Movimiento
+								cuando avanza hacia un campeon enemigo cercano. 
+							</p>
 
 
 						</div>
 						<div class="VayneTumble">
 							<a name="Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a> 
 							<h3>Voltereta</h3>
+							<p>Costo:30 de Maná Alcance:300</p>
+							<p>Vayne realiza una voltereta y se prepara para realizar su proximo disparo.El proximo Ataque
+								inflige daño critico.
+							</p>
+							<p>Vayne realiza una voltereta a corta distancia e inflige NaN% Daño de Ataque de bonificacion
+								de daño fisico en su siguiente ataque básico en los próximos 7 segundos.La bonificacion de
+								daño de Voltereta es igual al 50/55/60/65/70% del Daño de ataque total de Vayne.
+							</p>
 
 						</div>
 						<div class="SilveredBolts">
 							<a name="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a> 
 							<h3>Proyectiles de Plata</h3>
+							<p>Costo: Pasiva Alcance:750</p>
+							<p>Vayne impregna sus proyectiles con un metal extraño, con efectos tóxicos para los seres
+								malvados.El tercer ataque consecutivo o habilidad contra el mismo objetivo inflige un
+								porcentaje de la Vida máxima del objetivo como daño verdadero adicional (máximo:200 de daño contra monstrous). 
+							</p>
+							<p>Cada tercer ataque o habilidad consecutiva que se usa contra un enemigo inflige un 
+								4/6/8/10/12% de la vida máxima del enemigo como daño verdadero adicional (no menos 
+								 de 50/65/80/95/110).Proyectiles de plata no inflige mas de 200 de daño contra monstruos.
+							</p>
+							
 								</div>
 						<div class="Condemn">
 							<a name="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a> 
 							<h3>Condena</h3>
+							<p>Costo:90 de Maná Alcance:550</p>
+							<p>Vayne extrae una pesada ballesta y dispara un enorme proyectil contra su objetivo, 
+								infligiéndole daño y haciendo que retroceda.Si impacta contra el terreno, queda empalado
+								recibiendo daño adicional, además de quedar aturdido.
+							</p>
+							<p>Dispara un proyectil que repele al enemigo seleccionado y le infige 50/85/120/155/190 
+								(+50% Daño de Ataque adicional) de daño fisico.Si el enemigo colisiona contra un terreno, el 
+								daño aumenta a 50% Daño de ata que adicional y el objetivo quedará aturdido durante 1.5 
+								segundos.El daño de Condena aumenta un 100% si el objetivo colisiona contra terreno.
+							</p>
 						</div>
 						<div class="Inquisition">
 							<a name="Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a> 
 							<h3>Hora Final</h3>
+							<p>Costo:80 de Maná Alcance:1</p>
+							<p>Al prepararse para una confrontación épica, Vayne gana Daño de Ataque, invisibilidad 
+								durante Voltereta y el triple de bonificacion de Movimiento de Cazadora 
+								Nocturna.
+							</p>
+							<p>Vayne obtiene 20/30/40 de bonificacion de daño de ataque, y mejoras para Cazadora
+								Nocturna y Voltereta durante 8/10/12 segundos.La duracion de Hora Final se extenderá en
+								4 segundos cada vez que muera un campeón que haya recibido daño de Vayne dentro de los 3 
+								segundos.</p>
+							<p>Cazadora Nocturna: Vayne obtiene 90 de Velocidad de Movimiento.
+								Voltereta: Vayne también obtendrá Invisibilidad durante 1 segundo cuando dé la voltereta.
+								Sigili,Invisibilidad:Vayne solo podrá ser revelada por torretas enemigas cercanas o Visión 
+								Verdadera.La duracion de Hora Final no se puede aumentar más de su duracion máxima 
+								original.
+							</p>
 						</div>
 
 					</div>
