revisando errores menores

--- a/inicio.html
+++ b/inicio.html
@@ -86,7 +86,7 @@
 						<div class="VayneTumble">
 							<a name="Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a> 
 							<h3>Voltereta</h3>
-							<p>Costo:30 de Maná Alcance:300</p>
+							<p>Costo:30 de Maná<br>Alcance:300</p>
 							<p>Vayne realiza una voltereta y se prepara para realizar su proximo disparo.El proximo Ataque
 								inflige daño critico.
 							</p>
@@ -99,7 +99,7 @@
 						<div class="SilveredBolts">
 							<a name="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a> 
 							<h3>Proyectiles de Plata</h3>
-							<p>Costo: Pasiva Alcance:750</p>
+							<p>Costo: Pasiva<br>Alcance:750</p>
 							<p>Vayne impregna sus proyectiles con un metal extraño, con efectos tóxicos para los seres
 								malvados.El tercer ataque consecutivo o habilidad contra el mismo objetivo inflige un
 								porcentaje de la Vida máxima del objetivo como daño verdadero adicional (máximo:200 de daño contra monstrous). 
@@ -113,7 +113,7 @@
 						<div class="Condemn">
 							<a name="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a> 
 							<h3>Condena</h3>
-							<p>Costo:90 de Maná Alcance:550</p>
+							<p>Costo:90 de Maná<br>Alcance:550</p>
 							<p>Vayne extrae una pesada ballesta y dispara un enorme proyectil contra su objetivo, 
 								infligiéndole daño y haciendo que retroceda.Si impacta contra el terreno, queda empalado
 								recibiendo daño adicional, además de quedar aturdido.
@@ -127,7 +127,7 @@
 						<div class="Inquisition">
 							<a name="Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a> 
 							<h3>Hora Final</h3>
-							<p>Costo:80 de Maná Alcance:1</p>
+							<p>Costo:80 de Maná<br>Alcance:1</p>
 							<p>Al prepararse para una confrontación épica, Vayne gana Daño de Ataque, invisibilidad 
 								durante Voltereta y el triple de bonificacion de Movimiento de Cazadora 
 								Nocturna.
