--- a/historia.html
+++ b/historia.html
@@ -221,7 +221,10 @@
 		<!--  -->	
 
 	
-	<footer class="pie-pagina"> Contenido recopilado de diferentes fuentes</footer>
+	<footer class="pie-pagina"> Contenido recopilado de diferentes fuentes:<br>
+			<a href="https://play.lan.leagueoflegends.com/es_MX">league of legends</a><br>
+			<a href="http://www.lol-wallpapers.com/">lol-wallpapers</a>
+	</footer>
 
 
 
