--- a/foro.html
+++ b/foro.html
@@ -35,4 +35,4 @@
 		<!--  -->	
 
 	
-	<footer class="pie-pagina"> Contenido recopilado de diferentes fuentes</footer>
+	<footer class="pie-pagina"> </footer>
