--- a/foro.html
+++ b/foro.html
@@ -26,7 +26,7 @@
 	</header>
 	<section class="contenido">
 				<article>			
-
+					<img src="imagenes/enconstruccion.png" alt="enconstruccion">
 	
 				</article>
 				
