corrigiendo errores y agrendo estilo

--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Vayne|Lore, Habilidades, Skin, Guias, Counter </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-	<link rel="stylesheet"  href="estilos.css">
+	<link rel="stylesheet" type="text/css" href="css/inicio.css">
 	<link rel="icon" href="imagenes/favico.png" sizes="16x16" type="image/png" >
 
 </head>
@@ -26,7 +26,7 @@
 	</header>
 	<section class="contenido">
 				<article>
-					<div clas="info">
+					<div class="info">
 
 						<img src="imagenes/vayne.png">
 						<h1>Vayne</h1>
@@ -51,7 +51,7 @@
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/tCKNHBcmN4g?rel=0" 
 						frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 						<br>
-
+						<p>Habilidades</p>
 						<a href="#NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
 						<a href="#Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a>
 						<a href="#SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a>
@@ -59,7 +59,7 @@
 						<a href="#Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a>
 
 					</div>
-					<div clas="aspecto">
+					<div class="aspecto">
 						<h2>Aspectos</h2>
 						<img src="imagenes/aspectos/Vayne_0.jpg">
 						<img src="imagenes/aspectos/Vayne_1.jpg">
@@ -74,7 +74,7 @@
 					<div class="habilidades">
 						<h2>Habilidades</h2>
 
-						<div clas="NightHunter">
+						<div class="NightHunter">
 							<a name="NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a> 
 							<h3>Cazadora Nocturna</h3>
 							<p>Vayne caza sin piedad a los malhechores.Obteniendo 30 puntos de Velocidad de Movimiento
