--- a/foro.html
+++ b/foro.html
@@ -13,15 +13,12 @@
 	<header class="encabezado">
 		<h1>Vayne</h1>
 		<h2>La Cazadora Nocturna</h2>
-		<nav>
-			<ul>
-				<li><a href="inicio.html">Inicio</a></li>
-				<li><a href="historia.html">Historia</a></li>
-				<li><a href="foro.html">Foro</a></li>	
-
-			</ul>
-			
+		<nav>		
+				<a href="inicio.html">Inicio</a>
+				<a href="historia.html">Historia</a>
+				<a href="foro.html">Foro</a>				
 		</nav>
+	
 
 	</header>
 	<section class="contenido">
@@ -36,3 +33,4 @@
 
 	
 	<footer class="pie-pagina"> </footer>
+	
