--- a/historia.html
+++ b/historia.html
@@ -15,15 +15,12 @@
 		<h1>Vayne</h1>
 		<h2>La Cazadora Nocturna</h2>
 		
-		<nav>
-			<ul>
-				<li><a href="inicio.html">Inicio</a></li>
-				<li><a href="historia.html">Historia</a></li>
-				<li><a href="foro.html">Foro</a></li>	
-
-			</ul>
-			
+		<nav>		
+				<a href="inicio.html">Inicio</a>
+				<a href="historia.html">Historia</a>
+				<a href="foro.html">Foro</a>				
 		</nav>
+	
 
 	</header>
 
@@ -224,7 +221,7 @@
 	<footer class="pie-pagina"> Contenido recopilado de diferentes fuentes:<br>
 			<a href="https://play.lan.leagueoflegends.com/es_MX">league of legends</a><br>
 			<a href="http://www.lol-wallpapers.com/">lol-wallpapers</a>
-	</footer>
+	s</footer>
 
 
 
