--- a/inicio.html
+++ b/inicio.html
@@ -13,63 +13,86 @@
 	<header class="encabezado">
 		<h1>Vayne</h1>
 		<h2>La Cazadora Nocturna</h2>
-		<nav>
-			<ul>
-				<li><a href="inicio.html">Inicio</a></li>
-				<li><a href="historia.html">Historia</a></li>
-				<li><a href="foro.html">Foro</a></li>	
-
-			</ul>
-			
+		<nav>		
+			<a href="inicio.html">Inicio</a>
+			<a href="historia.html">Historia</a>
+			<a href="foro.html">Foro</a>				
 		</nav>
 
 	</header>
-	<section class="contenido">
+	<section>
 				<article>
 					<div class="info">
+						<div class="uno">
+							<img src="imagenes/vayne.png">
+							<h1>Vayne</h1>
+							<p>La Cazadora Nocturna</p>
 
-						<img src="imagenes/vayne.png">
-						<h1>Vayne</h1>
-						<p>La Cazadora Nocturna</p>
-
-						<dl>
-							<dt><img src="imagenes/estadisticas/vida.jpg">Vida:</dt>
-							<dd>498.44(+83 por nivel)</dd>
-							<dt><img src="imagenes/estadisticas/dañoataque.jpg">Daño de Ataque:</dt>
-							<dd>64(+1.66 por nivel)</dd>
-							<dt><img src="imagenes/estadisticas/velocidadataque.jpg">Velocidad de Ataque:</dt>
-							<dd>0.659(+3.3% por nivel)</dd>
-							<dt><img src="imagenes/estadisticas/velocidadmovimiento.jpg">Velocidad de Movimiento:</dt>
-							<dd>330</dd>
-							<dt><img src="imagenes/estadisticas/regeneracionvida.jpg">Regeneracion de Vida:</dt>
-							<dd>5.5(+0.55 por nivel)</dd>
-							<dt><img src="imagenes/estadisticas/armadura.jpg">Armadura:</dt>
-							<dd>28(+3.4 por nivel)</dd>
-							<dt><img src="imagenes/estadisticas/resistenciamagica.jpg">Resistencia Magica:</dt>
-							<dd>30(+0.5 por nivel)</dd>
-						</dl>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/tCKNHBcmN4g?rel=0" 
-						frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-						<br>
-						<p>Habilidades</p>
-						<a href="#NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
-						<a href="#Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a>
-						<a href="#SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a>
-						<a href="#Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a>
-						<a href="#Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a>
-
+							<dl>
+								<dt><img src="imagenes/estadisticas/vida.jpg">Vida:</dt>
+								<dd>498.44(+83 por nivel)</dd>
+								<dt><img src="imagenes/estadisticas/dañoataque.jpg">Daño de Ataque:</dt>
+								<dd>64(+1.66 por nivel)</dd>
+								<dt><img src="imagenes/estadisticas/velocidadataque.jpg">Velocidad de Ataque:</dt>
+								<dd>0.659(+3.3% por nivel)</dd>
+								<dt><img src="imagenes/estadisticas/velocidadmovimiento.jpg">Velocidad de Movimiento:</dt>
+								<dd>330</dd>
+								<dt><img src="imagenes/estadisticas/regeneracionvida.jpg">Regeneracion de Vida:</dt>
+								<dd>5.5(+0.55 por nivel)</dd>
+								<dt><img src="imagenes/estadisticas/armadura.jpg">Armadura:</dt>
+								<dd>28(+3.4 por nivel)</dd>
+								<dt><img src="imagenes/estadisticas/resistenciamagica.jpg">Resistencia Magica:</dt>
+								<dd>30(+0.5 por nivel)</dd>
+							</dl>
+						</div>
+						<div class="dos">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/tCKNHBcmN4g?rel=0" 
+							frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<br>
+							<p>Habilidades</p>
+							<a href="#NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
+							<a href="#Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a>
+							<a href="#SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a>
+							<a href="#Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a>
+							<a href="#Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a>
+						</div>
 					</div>
-					<div class="aspecto">
+					<div class="aspecto" style="border-top-width: 1080px;border-top-style: solid;">
 						<h2>Aspectos</h2>
-						<img src="imagenes/aspectos/Vayne_0.jpg">
-						<img src="imagenes/aspectos/Vayne_1.jpg">
-						<img src="imagenes/aspectos/Vayne_2.jpg">
-						<img src="imagenes/aspectos/Vayne_3.jpg">
-						<img src="imagenes/aspectos/Vayne_4.jpg">
-						<img src="imagenes/aspectos/Vayne_5.jpg">
-						<img src="imagenes/aspectos/Vayne_6.jpg">
-						<img src="imagenes/aspectos/Vayne_10.jpg">
-						<img src="imagenes/aspectos/Vayne_11.jpg">
+							<div class="aspectouno">
+								<img src="imagenes/aspectos/Vayne_0.jpg" style="width:100%;">
+							</div>
+
+							<div class="aspectodos">
+								<img src="imagenes/aspectos/Vayne_1.jpg" style="width:100%;">
+							</div>
+
+							<div class="aspectotres">
+								<img src="imagenes/aspectos/Vayne_2.jpg" style="width:100%;">
+							</div>
+
+							<div class="aspectocuatro">
+								<img src="imagenes/aspectos/Vayne_3.jpg" style="width:100%;">
+							</div>
+							<div class="aspectocinco">
+								<img src="imagenes/aspectos/Vayne_4.jpg" style="width:100%;">
+							</div>
+
+							<div class="aspectoseis">
+								<img src="imagenes/aspectos/Vayne_5.jpg" style="width:100%;">
+							</div>
+
+							<div class="aspectosiete">
+								<img src="imagenes/aspectos/Vayne_6.jpg" style="width:100%;">
+							</div>
+
+							<div class="aspectoocho">
+								<img src="imagenes/aspectos/Vayne_10.jpg" style="width:100%;">
+							</div>
+
+							<div class="aspectonueve">
+								<img src="imagenes/aspectos/Vayne_11.jpg" style="width:100%;">
+							</div>
 					</div>
 					<div class="habilidades">
 						<h2>Habilidades</h2>
