--- a/foro.html
+++ b/foro.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Vayne|Lore, Habilidades, Skin, Guias, Counter </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-	<link rel="stylesheet"  href="estilos.css">
+	<link rel="stylesheet"  href="foro.css">
 	<link rel="icon" href="imagenes/favico.png" sizes="16x16" type="image/png" >
 
 </head>
@@ -14,7 +14,7 @@
 		<h1>Vayne</h1>
 		<h2>La Cazadora Nocturna</h2>
 		<nav>		
-				<a href="inicio.html">Inicio</a>
+				<a href="index.html">Inicio</a>
 				<a href="historia.html">Historia</a>
 				<a href="foro.html">Foro</a>				
 		</nav>
