--- a/historia.html
+++ b/historia.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Vayne|Historia, Habilidades, Skin, Guias, Counter </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-	<link rel="stylesheet"  href="estilos.css">
+	<link rel="stylesheet"  href="historia.css">
 	<link rel="icon" href="imagenes/favico.png" sizes="16x16" type="image/png" >
 
 </head>
@@ -16,7 +16,7 @@
 		<h2>La Cazadora Nocturna</h2>
 		
 		<nav>		
-				<a href="inicio.html">Inicio</a>
+				<a href="index.html">Inicio</a>
 				<a href="historia.html">Historia</a>
 				<a href="foro.html">Foro</a>				
 		</nav>
