modificaciones finales de index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+<div class="contenedor">
 	
 	<header class="encabezado">
 		<h1>Vayne</h1>
@@ -23,8 +24,8 @@
 	<section>
 				<article>
 					<div class="info">
-						<div class="uno">
-							<img src="imagenes/vayne.png">
+						<div class="infouno">
+							<img src="imagenes/vayne.png" alt="retratode vayne">
 							<h1>Vayne</h1>
 							<p>La Cazadora Nocturna</p>
 
@@ -45,19 +46,31 @@
 								<dd>30(+0.5 por nivel)</dd>
 							</dl>
 						</div>
-						<div class="dos">
+						<div class="infodos">
+							<div class="video0">
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/tCKNHBcmN4g?rel=0" 
 							frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 							<br>
-							<p>Habilidades</p>
-							<a href="#NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
-							<a href="#Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a>
-							<a href="#SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a>
-							<a href="#Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a>
-							<a href="#Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a>
+							<span><p>Habilidades</p></span>
+							<div class="hab0">
+								<a href="#NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
+							</div>
+							<div class="hab1">
+								<a href="#Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a>
+							</div>
+							<div class="hab2">
+								<a href="#SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a>
+							</div>
+							<div class="hab3">
+								<a href="#Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a>
+							</div>
+							<div class="hab4">
+								<a href="#Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a>
+							</div>
 						</div>
 					</div>
-					<div class="aspecto" style="border-top-width: 1080px;border-top-style: solid;">
+					<div class="aspecto">
 						<h2>Aspectos</h2>
 							<div class="aspectouno">
 								<img src="imagenes/aspectos/Vayne_0.jpg" style="width:100%;">
@@ -98,73 +111,111 @@
 						<h2>Habilidades</h2>
 
 						<div class="NightHunter">
-							<a name="NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a> 
-							<h3>Cazadora Nocturna</h3>
-							<p>Vayne caza sin piedad a los malhechores.Obteniendo 30 puntos de Velocidad de Movimiento
+							<div class="habilidad0">
+								<a name="NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
+								<div class="name0">
+								<h3>Cazadora Nocturna</h3>
+								</div>
+								<p>Vayne caza sin piedad a los malhechores.Obteniendo 30 puntos de Velocidad de Movimiento
 								cuando avanza hacia un campeon enemigo cercano. 
-							</p>
-
+								</p>
+							</div>
+							<div class="habilidad0video">
+								<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_P1.webm" 
+							 	 allowfullscreen></iframe>
+							</div>
 
 						</div>
 						<div class="VayneTumble">
-							<a name="Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a> 
-							<h3>Voltereta</h3>
-							<p>Costo:30 de Maná<br>Alcance:300</p>
-							<p>Vayne realiza una voltereta y se prepara para realizar su proximo disparo.El proximo Ataque
+							<div class="habilidad1">
+								<a name="Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a>
+								<div class="name1"> 
+								<h3>Voltereta</h3>
+								</div>
+								<p>Costo:30 de Maná<br>Alcance:300</p>
+								<p>Vayne realiza una voltereta y se prepara para realizar su proximo disparo.El proximo Ataque
 								inflige daño critico.
-							</p>
-							<p>Vayne realiza una voltereta a corta distancia e inflige NaN% Daño de Ataque de bonificacion
+								</p>
+								<p>Vayne realiza una voltereta a corta distancia e inflige NaN% Daño de Ataque de bonificacion
 								de daño fisico en su siguiente ataque básico en los próximos 7 segundos.La bonificacion de
 								daño de Voltereta es igual al 50/55/60/65/70% del Daño de ataque total de Vayne.
-							</p>
+								</p>
+							</div>
+							<div class="habilidad1video">
+									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_Q1.webm" 
+									 allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 
 						</div>
 						<div class="SilveredBolts">
-							<a name="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a> 
-							<h3>Proyectiles de Plata</h3>
-							<p>Costo: Pasiva<br>Alcance:750</p>
-							<p>Vayne impregna sus proyectiles con un metal extraño, con efectos tóxicos para los seres
+							<div class="habilidad2">
+								<a name="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a> 
+								<div class="name2">
+								<h3>Proyectiles de Plata</h3>
+								</div>
+								<p>Costo: Pasiva<br>Alcance:750</p>
+								<p>Vayne impregna sus proyectiles con un metal extraño, con efectos tóxicos para los seres
 								malvados.El tercer ataque consecutivo o habilidad contra el mismo objetivo inflige un
 								porcentaje de la Vida máxima del objetivo como daño verdadero adicional (máximo:200 de daño contra monstrous). 
-							</p>
-							<p>Cada tercer ataque o habilidad consecutiva que se usa contra un enemigo inflige un 
+								</p>
+								<p>Cada tercer ataque o habilidad consecutiva que se usa contra un enemigo inflige un 
 								4/6/8/10/12% de la vida máxima del enemigo como daño verdadero adicional (no menos 
 								 de 50/65/80/95/110).Proyectiles de plata no inflige mas de 200 de daño contra monstruos.
-							</p>
-							
-								</div>
+								</p>
+							</div>
+							<div class="habilidad2video">
+									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_W1.webm" 
+									 allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+						</div>
 						<div class="Condemn">
-							<a name="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a> 
-							<h3>Condena</h3>
-							<p>Costo:90 de Maná<br>Alcance:550</p>
-							<p>Vayne extrae una pesada ballesta y dispara un enorme proyectil contra su objetivo, 
+							<div class="habilidad3">
+								<a name="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a> 
+								<div class="name3">
+								<h3>Condena</h3>
+								</div>
+								<p>Costo:90 de Maná<br>Alcance:550</p>
+								<p>Vayne extrae una pesada ballesta y dispara un enorme proyectil contra su objetivo, 
 								infligiéndole daño y haciendo que retroceda.Si impacta contra el terreno, queda empalado
 								recibiendo daño adicional, además de quedar aturdido.
-							</p>
-							<p>Dispara un proyectil que repele al enemigo seleccionado y le infige 50/85/120/155/190 
+								</p>
+								<p>Dispara un proyectil que repele al enemigo seleccionado y le infige 50/85/120/155/190 
 								(+50% Daño de Ataque adicional) de daño fisico.Si el enemigo colisiona contra un terreno, el 
 								daño aumenta a 50% Daño de ata que adicional y el objetivo quedará aturdido durante 1.5 
 								segundos.El daño de Condena aumenta un 100% si el objetivo colisiona contra terreno.
-							</p>
+								</p>
+							</div>
+							<div class="habilidad3video">
+									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_E1.webm" 
+									 allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>	
 						</div>
 						<div class="Inquisition">
-							<a name="Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a> 
-							<h3>Hora Final</h3>
-							<p>Costo:80 de Maná<br>Alcance:1</p>
-							<p>Al prepararse para una confrontación épica, Vayne gana Daño de Ataque, invisibilidad 
+							<div class="habilidad4">
+								<a name="Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a> 
+								<div class="name4">
+								<h3>Hora Final</h3>
+								</div>
+								<p>Costo:80 de Maná<br>Alcance:1</p>
+								<p>Al prepararse para una confrontación épica, Vayne gana Daño de Ataque, invisibilidad 
 								durante Voltereta y el triple de bonificacion de Movimiento de Cazadora 
 								Nocturna.
-							</p>
-							<p>Vayne obtiene 20/30/40 de bonificacion de daño de ataque, y mejoras para Cazadora
+								</p>
+								<p>Vayne obtiene 20/30/40 de bonificacion de daño de ataque, y mejoras para Cazadora
 								Nocturna y Voltereta durante 8/10/12 segundos.La duracion de Hora Final se extenderá en
 								4 segundos cada vez que muera un campeón que haya recibido daño de Vayne dentro de los 3 
 								segundos.</p>
-							<p>Cazadora Nocturna: Vayne obtiene 90 de Velocidad de Movimiento.
+								<p>Cazadora Nocturna: Vayne obtiene 90 de Velocidad de Movimiento.
 								Voltereta: Vayne también obtendrá Invisibilidad durante 1 segundo cuando dé la voltereta.
 								Sigili,Invisibilidad:Vayne solo podrá ser revelada por torretas enemigas cercanas o Visión 
 								Verdadera.La duracion de Hora Final no se puede aumentar más de su duracion máxima 
 								original.
-							</p>
+								</p>
+							</div>
+							<div class="habilidad4video">
+									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_R1.webm" 
+									 allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>	
 						</div>
 
 					</div>
@@ -175,7 +226,9 @@
 		<!--  -->	
 
 	
-	<footer class="pie-pagina"> Contenido recopilado de diferentes fuentes:<br>
+	<footer class="piepagina"> <p>Contenido recopilado de diferentes fuentes:</p>
 			<a href="https://play.lan.leagueoflegends.com/es_MX">league of legends</a><br>
 			<a href="http://www.lol-wallpapers.com/">lol-wallpapers</a>
 	</footer>
+</div>
+</body>		
