--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="es">
 	<meta charset="utf-8">
-	<title>Vayne|Lore, Habilidades, Skin, Guias, Counter </title>
+	<title>Vayne|Lore, Habilidades, Skin</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="icon" href="imagenes/favico.png" sizes="16x16" type="image/png" >
@@ -17,12 +17,11 @@
 		<nav>		
 			<a href="index.html">Inicio</a>
 			<a href="historia.html">Historia</a>
-			<a href="foro.html">Foro</a>				
+			<a href="contacto.html">Contacto</a>				
 		</nav>
 
 	</header>
 	<section>
-				<article>
 					<div class="info">
 						<div class="infouno">
 							<img src="imagenes/vayne.png" alt="retratode vayne">
@@ -219,9 +218,6 @@
 						</div>
 
 					</div>
-				</article>
-				
-
 	</section>
 		<!--  -->	
 
@@ -231,4 +227,5 @@
 			<a href="http://www.lol-wallpapers.com/">lol-wallpapers</a>
 	</footer>
 </div>
-</body>		
+</body>
+</html>		
