--- a/contacto.html
+++ b/contacto.html
@@ -23,13 +23,13 @@
 	</header>
 	<section class="contenido">
 			<h2>Formulario de Contacto</h2>
-			<form action="enviar.php" method="post">
+			<form action="php/enviar.php" method="post">
 				Nombre: 
 				<input type="text" name="nombre">
 				Email
 				<input type="email" name="email">
-				Comentarios:
-				<textarea name="comentarios">
+				Comentario:
+				<textarea name="comentario">
 				</textarea>
 				
 				<input type="submit" value="Enviar">
