--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
 								</p>
 							</div>
 							<div class="habilidad0video">
-								<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_P1.webm" 
-							 	 allowfullscreen></iframe>
+								<video width="288" height="196" controls>
+									<source src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_P1.webm" type="video/webm">
+								</video>
 							</div>
 
 						</div>
@@ -141,8 +142,9 @@
 								</p>
 							</div>
 							<div class="habilidad1video">
-									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_Q1.webm" 
-									 allow="autoplay; encrypted-media" allowfullscreen></iframe>
+									<video width="288" height="196" controls>
+										<source src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_Q1.webm" type="video/webm">
+									 </video>
 							</div>
 
 						</div>
@@ -164,7 +166,7 @@
 							</div>
 							<div class="habilidad2video">
 									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_W1.webm" 
-									 allow="autoplay; encrypted-media" allowfullscreen></iframe>
+									 allow="controls; encrypted-media" allowfullscreen></iframe>
 							</div>
 						</div>
 						<div class="Condemn">
@@ -186,7 +188,7 @@
 							</div>
 							<div class="habilidad3video">
 									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_E1.webm" 
-									 allow="autoplay; encrypted-media" allowfullscreen></iframe>
+									 allow="controls; encrypted-media" allowfullscreen></iframe>
 							</div>	
 						</div>
 						<div class="Inquisition">
@@ -213,7 +215,7 @@
 							</div>
 							<div class="habilidad4video">
 									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_R1.webm" 
-									 allow="autoplay; encrypted-media" allowfullscreen></iframe>
+									 allow="controls; encrypted-media" allowfullscreen></iframe>
 							</div>	
 						</div>
 
