--- a/contacto.html
+++ b/contacto.html
@@ -25,9 +25,9 @@
 			<h2>Formulario de Contacto</h2>
 			<form action="php/enviar.php" method="post">
 				Nombre: 
-				<input type="text" name="nombre">
-				Email
-				<input type="email" name="email">
+				<input type="text" name="nombre"><br><br>
+				Email:   
+				<input type="email" name="email"><br><br>
 				Comentario:
 				<textarea name="comentario">
 				</textarea>
