modificacion de index

--- a/index.html
+++ b/index.html
@@ -165,8 +165,10 @@
 								</p>
 							</div>
 							<div class="habilidad2video">
-									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_W1.webm" 
-									 allow="controls; encrypted-media" allowfullscreen></iframe>
+									<video width="288" height="196" controls>
+										<source src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_W1.webm" type="video/webm">
+									 
+									</video>
 							</div>
 						</div>
 						<div class="Condemn">
@@ -187,8 +189,10 @@
 								</p>
 							</div>
 							<div class="habilidad3video">
-									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_E1.webm" 
-									 allow="controls; encrypted-media" allowfullscreen></iframe>
+									<video width="288" height="196" controls>
+										<source src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_E1.webm" type="video/webm">
+									 
+									</video>
 							</div>	
 						</div>
 						<div class="Inquisition">
@@ -214,8 +218,9 @@
 								</p>
 							</div>
 							<div class="habilidad4video">
-									<iframe width="288" height="196" src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_R1.webm" 
-									 allow="controls; encrypted-media" allowfullscreen></iframe>
+									<video width="288" height="196" controls>
+										<source src="https://d28xe8vt774jo5.cloudfront.net/champion-abilities/0067/ability_0067_R1.webm" type="video/webm">
+									</video>
 							</div>	
 						</div>
 
