--- a/contacto.html
+++ b/contacto.html
@@ -40,9 +40,7 @@
 		<!--  -->	
 
 	
-		<footer class="pie-pagina"><p>Contenido recopilado de diferentes fuentes:</p>
-			<a href="https://play.lan.leagueoflegends.com/es_MX">league of legends</a><br>
-			<a href="http://www.lol-wallpapers.com/">lol-wallpapers</a>
+		<footer class="pie-pagina">
 	</footer>
 </body>
 </html>	
