--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<br>
-							<span><p>Habilidades</p></span>
+							<p><span>Habilidades</span></p>
 							<div class="hab0">
 								<a href="#NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
 							</div>
@@ -173,7 +173,7 @@
 						</div>
 						<div class="Condemn">
 							<div class="habilidad3">
-								<a name="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a> 
+								<a id="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a> 
 								<div class="name3">
 								<h3>Condena</h3>
 								</div>
