--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						</div>
 						<div class="SilveredBolts">
 							<div class="habilidad2">
-								<a name="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a> 
+								<a id="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a> 
 								<div class="name2">
 								<h3>Proyectiles de Plata</h3>
 								</div>
